tests/e2e/fail/v16_null_deref_trap.ep
# EXIT: 1
# STDOUT: runtime trap: null deref

type Inner {
    ok: bool
}

type Outer {
    inner: Inner
}

fun run(): i64 {
    let o = new Outer
    let x = o.inner
    if x.ok {
        ret 1
    }
    ret 0
}

fun main(): void {
    exit(run())
}
